// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddNewQuestionForm /> renders correctly 1`] = `
<form>
  <Field
    component={[Function]}
    label={
      <FormattedMessage
        id="global.title"
        values={Object {}}
      />
    }
    name="question"
    type="text"
  />
  <Field
    component={[Function]}
    name="required"
    type="checkbox"
  >
    <FormattedMessage
      id="global.admin.required"
      values={Object {}}
    />
  </Field>
  <Field
    component={[Function]}
    label="Type"
    name="type"
    type="select"
  >
    <option
      disabled={true}
      value=""
    >
      <FormattedMessage
        id="global.select"
        values={Object {}}
      />
    </option>
    <option
      value={0}
    >
      <FormattedMessage
        id="global.question.types.text"
        values={Object {}}
      />
    </option>
    <option
      value={4}
    >
      <FormattedMessage
        id="global.question.types.select"
        values={Object {}}
      />
    </option>
  </Field>
</form>
`;

exports[`<AddNewQuestionForm /> renders correctly for multiple choices 1`] = `
<form>
  <Field
    component={[Function]}
    label={
      <FormattedMessage
        id="global.title"
        values={Object {}}
      />
    }
    name="question"
    type="text"
  />
  <Field
    component={[Function]}
    name="required"
    type="checkbox"
  >
    <FormattedMessage
      id="global.admin.required"
      values={Object {}}
    />
  </Field>
  <Field
    component={[Function]}
    label="Type"
    name="type"
    type="select"
  >
    <option
      disabled={true}
      value=""
    >
      <FormattedMessage
        id="global.select"
        values={Object {}}
      />
    </option>
    <option
      value={0}
    >
      <FormattedMessage
        id="global.question.types.text"
        values={Object {}}
      />
    </option>
    <option
      value={4}
    >
      <FormattedMessage
        id="global.question.types.select"
        values={Object {}}
      />
    </option>
  </Field>
  <FieldArray
    component={[Function]}
    name="choices"
  />
</form>
`;
